deploy: 78d4434280dd6607c5ba4a03e30943b37a8e042a

--- a/d8/da5/AlgebraLinear_8cpp.html
+++ b/d8/da5/AlgebraLinear_8cpp.html
@@ -112,7 +112,7 @@ Gráfico de dependência de inclusões para AlgebraLinear.cpp:</div>
 <area shape="poly" title=" " alt="" coords="465,106,410,146,407,141,461,102"/>
 <area shape="rect" title=" " alt="" coords="451,152,506,177"/>
 <area shape="poly" title=" " alt="" coords="481,104,481,138,476,138,476,104"/>
-<area shape="rect" title=" " alt="" coords="531,152,667,177"/>
+<area shape="rect" href="../../dc/d73/AlgebraLinear_8tpp.html" title="Implementações de templates para operações de álgebra linear." alt="" coords="531,152,667,177"/>
 <area shape="poly" title=" " alt="" coords="499,102,568,142,566,147,497,106"/>
 <area shape="rect" title=" " alt="" coords="5,225,91,251"/>
 <area shape="poly" title=" " alt="" coords="336,178,105,227,104,222,335,173"/>
@@ -128,7 +128,7 @@ Gráfico de dependência de inclusões para AlgebraLinear.cpp:</div>
 <area shape="poly" title=" " alt="" coords="408,175,503,217,501,222,406,180"/>
 <area shape="rect" title=" " alt="" coords="607,225,670,251"/>
 <area shape="poly" title=" " alt="" coords="423,175,594,222,593,227,422,180"/>
-<area shape="rect" title=" " alt="" coords="695,225,783,251"/>
+<area shape="rect" href="../../dd/dc2/Matriz_8tpp.html" title="Implementação dos métodos da classe template Matriz." alt="" coords="695,225,783,251"/>
 <area shape="poly" title=" " alt="" coords="427,172,682,222,681,228,426,177"/>
 </map>
 </div>
