--- a/de/d26/Auxiliar_8cpp.html
+++ b/de/d26/Auxiliar_8cpp.html
@@ -126,7 +126,7 @@ Gráfico de dependência de inclusões para Auxiliar.cpp:</div>
 <area shape="rect" title=" " alt="" coords="393,225,479,251"/>
 <area shape="poly" title=" " alt="" coords="439,178,439,212,433,212,433,178"/>
 <area shape="poly" title=" " alt="" coords="482,173,707,223,706,228,481,178"/>
-<area shape="rect" title=" " alt="" coords="504,225,592,251"/>
+<area shape="rect" href="../../dd/dc2/Matriz_8tpp.html" title="Implementação dos métodos da classe template Matriz." alt="" coords="504,225,592,251"/>
 <area shape="poly" title=" " alt="" coords="455,175,519,215,516,220,453,180"/>
 </map>
 </div>
