deploy: 3360a753eb13bc93e9b088362b84a8986802001d

--- a/d6/d1b/Matriz_8hpp.html
+++ b/d6/d1b/Matriz_8hpp.html
@@ -141,7 +141,7 @@ Este grafo mostra quais arquivos estão direta ou indiretamente relacionados com
 <area shape="poly" title=" " alt="" coords="253,39,174,81,172,76,250,35"/>
 <area shape="rect" href="../../d2/d3f/ifnum_8hpp.html" title="Header central que agrega todos os módulos principais do projeto." alt="" coords="215,152,354,177"/>
 <area shape="poly" title=" " alt="" coords="287,45,287,152,282,152,282,45"/>
-<area shape="rect" href="../../de/dbb/Auxiliar_8hpp.html" title="Declarações de funções utilitárias gerais para facilitar operações comuns no projeto...." alt="" coords="323,79,473,104"/>
+<area shape="rect" href="../../de/dbb/Auxiliar_8hpp.html" title="Declarações de funções e classes utilitárias gerais para facilitar operações comuns e testes." alt="" coords="323,79,473,104"/>
 <area shape="poly" title=" " alt="" coords="316,36,381,76,378,81,313,40"/>
 <area shape="poly" title=" " alt="" coords="186,108,264,149,262,154,183,113"/>
 <area shape="rect" href="../../d8/da5/AlgebraLinear_8cpp.html" title="Implementações auxiliares para operações de álgebra linear." alt="" coords="5,152,191,177"/>
