--- a/d7/d2c/namespaceifnum_1_1rng.html
+++ b/d7/d2c/namespaceifnum_1_1rng.html
@@ -97,7 +97,7 @@ $(document).ready(function(){initNavTree('d7/d2c/namespaceifnum_1_1rng.html','..
 </div><!--header-->
 <div class="contents">
 
-<p>Subnamespace com funções utilitárias para geração de números aleatórios.  
+<p>Funções utilitárias para geração de números aleatórios.  
 <a href="../../d7/d2c/namespaceifnum_1_1rng.html#details">Mais...</a></p>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a id="func-members" name="func-members"></a>
@@ -114,7 +114,7 @@ Variáveis</h2></td></tr>
 <tr class="separator:afc65bbbfa86a7e12f2456185703f46f3"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Descrição detalhada</h2>
-<div class="textblock"><p>Subnamespace com funções utilitárias para geração de números aleatórios. </p>
+<div class="textblock"><p>Funções utilitárias para geração de números aleatórios. </p>
 </div><h2 class="groupheader">Funções</h2>
 <a id="a6c2524644ce91c6a51fbd080ff3501b8" name="a6c2524644ce91c6a51fbd080ff3501b8"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a6c2524644ce91c6a51fbd080ff3501b8">&#9670;&#160;</a></span>matriz_aleatoria()</h2>
