--- a/dd/dc2/Matriz_8tpp.html
+++ b/dd/dc2/Matriz_8tpp.html
@@ -111,7 +111,7 @@ Este grafo mostra quais arquivos estão direta ou indiretamente relacionados com
 <area shape="poly" title=" " alt="" coords="253,113,174,154,172,149,250,108"/>
 <area shape="rect" href="../../d2/d3f/ifnum_8hpp.html" title="Header central que agrega todos os módulos principais do projeto." alt="" coords="215,225,354,251"/>
 <area shape="poly" title=" " alt="" coords="287,118,287,225,282,225,282,118"/>
-<area shape="rect" href="../../de/dbb/Auxiliar_8hpp.html" title="Declarações de funções utilitárias gerais para facilitar operações comuns no projeto...." alt="" coords="323,152,473,177"/>
+<area shape="rect" href="../../de/dbb/Auxiliar_8hpp.html" title="Declarações de funções e classes utilitárias gerais para facilitar operações comuns e testes." alt="" coords="323,152,473,177"/>
 <area shape="poly" title=" " alt="" coords="316,109,381,150,378,154,313,114"/>
 <area shape="poly" title=" " alt="" coords="186,181,264,223,262,227,183,186"/>
 <area shape="rect" href="../../d8/da5/AlgebraLinear_8cpp.html" title="Implementações auxiliares para operações de álgebra linear." alt="" coords="5,225,191,251"/>
